common-applications/mindspore-cn4-xihe-npu-cluster/mindspore-xihe/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: mindspore-xihe
  name: mindspore-xihe
