common-applications/mindspore-cn4-xihe-npu-cluster/mindspore-xihe/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: mindspore-xihe
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: mindspore-xihe
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
          - --provider=oidc
          - --email-domain=*
          - --upstream=file:///dev/null
          - --http-address=0.0.0.0:4180
          - --provider-display-name=authing
          - --cookie-expire=12h0m0s
          - --oidc-issuer-url=https://xihe-test2-cz.authing.cn/oidc
          - --pass-access-token=true
          - --pass-basic-auth=true
          - --set-xauthrequest=true
          - --insecure-oidc-allow-unverified-email=true
          - --session-cookie-minimal=false
          - --cookie-secure=true
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/oauth2-proxy:master-673698-arm
          imagePullPolicy: Always
          name: oauth2-proxy
          ports:
          - containerPort: 4180
            protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 4180
            initialDelaySeconds: 5
            failureThreshold: 3
            successThreshold: 1
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 4180
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 1000m
              memory: 1000Mi
            limits:
              cpu: 1000m
              memory: 1000Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
